--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "date-fns": "^3.6.0",
     "dexie": "^4.2.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.19",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "msw": "^2.11.3",
